--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,72 @@
-env
+# Python デフォルト
+__pycache__/
+*.py[cod]
+*$py.class
+
+# 環境変数ファイル
+.env
+.env.local
+.env.development
+.env.development.local
+.env.test
+.env.test.local
+.env.production
+.env.production.local
+
+# 仮想環境
+venv/
+env/
+.venv/
+Envs/
+_venv/
+virtualenv_seed.txt
+requirements*.txt  # requirements.txt なども無視する場合
+
+# ビルドと一時ファイル
+build/
+dist/
+*.egg-info/
+*.whl
+MANIFEST
+
+# ログファイル
+*.log
+*.out
+
+# テスト結果
+.coverage
+coverage.xml
+htmlcov/
+.pytest_cache/
+
+# IDE 固有の設定ファイル
+.idea/
+.project
+.workspace
+*.iml
+.vscode/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.swp
+*.swo
+
+# OS 固有の一時ファイル
+.DS_Store
+Thumbs.db
+
+# その他の不要なファイルやディレクトリ
+*.pyc
+__pypackages__/
+*.orig
+*.rej
+*.bak
+*.swp
+
+# パッケージング関連 (必要に応じて)
+# deb_dist/
+# rpm_dist/
+
+# Docker 関連 (必要に応じて)
+# */docker-compose*.yml
